--- a/Demo/EventPublisher/EventPublisher.csproj
+++ b/Demo/EventPublisher/EventPublisher.csproj
@@ -1,8 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Common\Common.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Serilog" Version="2.7.1" />
+      <PackageReference Include="System.Reactive" Version="4.1.2" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" />
+      <PackageReference Include="Polly" Version="6.1.0" />
+    </ItemGroup>
 
 </Project>
