--- a/Demo/EventPublisher/EventPublisher.csproj
+++ b/Demo/EventPublisher/EventPublisher.csproj
@@ -7,14 +7,25 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Common\Common.csproj" />
+        <ProjectReference Include="..\Common\Common.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Serilog" Version="2.7.1" />
-      <PackageReference Include="System.Reactive" Version="4.1.2" />
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" />
-      <PackageReference Include="Polly" Version="6.1.0" />
+        <PackageReference Include="Serilog" Version="2.7.1" />
+        <PackageReference Include="Serilog.Sinks.Async" Version="1.3.0" />
+        <PackageReference Include="Serilog.Sinks.Literate" Version="3.0.0" />
+        <PackageReference Include="Serilog.Enrichers.Demystify" Version="0.1.0-dev-00016" />
+        <PackageReference Include="SimpleInjector" Version="4.4.0" />
+        <PackageReference Include="System.Reactive" Version="4.1.2" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" />
+        <PackageReference Include="Polly" Version="6.1.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.1.1" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="appsettings.json" CopyToOutputDirectory="PreserveNewest" />
     </ItemGroup>
 
 </Project>
