--- a/Demo/EventPublisher.Tests/EventPublisher.Tests.csproj
+++ b/Demo/EventPublisher.Tests/EventPublisher.Tests.csproj
@@ -4,6 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <LangVersion>latest</LangVersion>
+        <NoWarn>1998</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
