--- a/Demo/Orders/Orders.csproj
+++ b/Demo/Orders/Orders.csproj
@@ -3,6 +3,11 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <NoWarn>1998</NoWarn>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore" Version="2.1.*" />
+    </ItemGroup>
 
 </Project>
