--- a/Demo/Orders/Orders.csproj
+++ b/Demo/Orders/Orders.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore" Version="2.1.*" />
+      <PackageReference Include="SimpleInjector" Version="4.4.0" />
+      <PackageReference Include="SimpleInjector.Integration.AspNetCore" Version="4.4.1" />
     </ItemGroup>
 
 </Project>
