--- a/Demo/Common/Common.csproj
+++ b/Demo/Common/Common.csproj
@@ -3,11 +3,17 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <LangVersion>latest</LangVersion>
-        <RootNamespace>Domain</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="MongoDB.Driver" Version="2.7.2" />
+        <PackageReference Include="Serilog" Version="2.7.1" />
+        <PackageReference Include="Serilog.Sinks.Async" Version="1.3.0" />
+        <PackageReference Include="Serilog.Sinks.Literate" Version="3.0.0" />
+        <PackageReference Include="Serilog.Enrichers.Demystify" Version="0.1.0-dev-00016" />
+        <PackageReference Include="MongoDB.Driver" Version="2.7.2" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.1.1" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.0.0" />
     </ItemGroup>
 
 </Project>
