--- a/Demo/Orders/Orders.csproj
+++ b/Demo/Orders/Orders.csproj
@@ -7,17 +7,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore" Version="2.1.*"/>
-        <PackageReference Include="SimpleInjector" Version="4.4.0"/>
-        <PackageReference Include="SimpleInjector.Integration.AspNetCore" Version="4.4.1"/>
+        <PackageReference Include="Microsoft.AspNetCore" Version="2.1.*" />
+        <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
+        <PackageReference Include="SimpleInjector" Version="4.4.0" />
+        <PackageReference Include="SimpleInjector.Integration.AspNetCore" Version="4.4.1" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Common\Common.csproj"/>
+        <ProjectReference Include="..\Common\Common.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="appsettings.json" CopyToOutputDirectory="PreserveNewest"/>
+        <None Include="appsettings.json" CopyToOutputDirectory="PreserveNewest" />
     </ItemGroup>
 
 </Project>
