--- a/Demo/Common/Common.csproj
+++ b/Demo/Common/Common.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <LangVersion>latest</LangVersion>
+        <NoWarn>1998</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
@@ -11,6 +12,8 @@
         <PackageReference Include="Serilog.Sinks.Literate" Version="3.0.0" />
         <PackageReference Include="Serilog.Enrichers.Demystify" Version="0.1.0-dev-00016" />
         <PackageReference Include="MongoDB.Driver" Version="2.7.2" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" />
+        <PackageReference Include="Polly" Version="6.1.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.1.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.0.0" />
