--- a/Demo/Payments/Payments.csproj
+++ b/Demo/Payments/Payments.csproj
@@ -18,4 +18,8 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+        <None Include="appsettings.json" CopyToOutputDirectory="PreserveNewest" />
+    </ItemGroup>
+
 </Project>
