--- a/Demo/Common/Common.csproj
+++ b/Demo/Common/Common.csproj
@@ -17,6 +17,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.1.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.0.0" />
+        <PackageReference Include="System.Reactive" Version="4.1.2" />
     </ItemGroup>
 
 </Project>
