Move messages to shared libraries

--- a/Demo/Payments/Payments.csproj
+++ b/Demo/Payments/Payments.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Common\Common.csproj" />
+      <ProjectReference Include="..\Events\Events.csproj" />
     </ItemGroup>
 
     <ItemGroup>
