--- a/Demo/Common/Common.csproj
+++ b/Demo/Common/Common.csproj
@@ -20,4 +20,8 @@
         <PackageReference Include="System.Reactive" Version="4.1.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Events\Events.csproj" />
+    </ItemGroup>
+
 </Project>
