--- a/Demo/Orders/Orders.csproj
+++ b/Demo/Orders/Orders.csproj
@@ -15,7 +15,9 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Commands\Commands.csproj" />
         <ProjectReference Include="..\Common\Common.csproj" />
+        <ProjectReference Include="..\Events\Events.csproj" />
     </ItemGroup>
 
     <ItemGroup>
