--- a/Demo/Payments/Payments.csproj
+++ b/Demo/Payments/Payments.csproj
@@ -8,8 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Common\Common.csproj" />
       <ProjectReference Include="..\Events\Events.csproj" />
+      <ProjectReference Include="..\Framework\Framework.csproj" />
     </ItemGroup>
 
     <ItemGroup>
