--- a/Demo/Common.Tests/Common.Tests.csproj
+++ b/Demo/Common.Tests/Common.Tests.csproj
@@ -17,11 +17,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Common\Common.csproj" />
+        <None Include="appsettings.json" CopyToOutputDirectory="PreserveNewest" />
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="appsettings.json" CopyToOutputDirectory="PreserveNewest" />
+      <ProjectReference Include="..\Framework\Framework.csproj" />
     </ItemGroup>
 
 </Project>
