--- a/Demo/EventPublisher/EventPublisher.csproj
+++ b/Demo/EventPublisher/EventPublisher.csproj
@@ -8,10 +8,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Common\Common.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
         <PackageReference Include="SimpleInjector" Version="4.4.0" />
         <PackageReference Include="System.Reactive" Version="4.1.2" />
         <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.1.1" />
@@ -21,6 +17,10 @@
 
     <ItemGroup>
         <None Include="appsettings.json" CopyToOutputDirectory="PreserveNewest" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Framework\Framework.csproj" />
     </ItemGroup>
 
 </Project>
